respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Fee__c.object
<CustomObject>
    <fields>
        <fullName>Sub_Allocation__c</fullName>
        <label>Sub Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Master_Allocation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customs Duty</fullName>
                </value>
                <value>
                    <fullName>Customs VAT</fullName>
                </value>
                <value>
                    <fullName>Provisional Payment</fullName>
                </value>
                <value>
                    <fullName>Customs Other</fullName>
                </value>
                <value>
                    <fullName>Cargo Dues</fullName>
                </value>
                <value>
                    <fullName>Terminal Handling Charge</fullName>
                </value>
                <value>
                    <fullName>Landing charge</fullName>
                </value>
                <value>
                    <fullName>Shipping Order</fullName>
                </value>
                <value>
                    <fullName>Port Storage</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Landside Charge</fullName>
                </value>
                <value>
                    <fullName>Cartage</fullName>
                </value>
                <value>
                    <fullName>Unpack</fullName>
                </value>
                <value>
                    <fullName>Repack</fullName>
                </value>
                <value>
                    <fullName>Depot Storage</fullName>
                </value>
                <value>
                    <fullName>Ex Works Charge</fullName>
                </value>
                <value>
                    <fullName>Freight Import</fullName>
                </value>
                <value>
                    <fullName>Delivery Charge</fullName>
                </value>
                <value>
                    <fullName>Profit Share</fullName>
                </value>
                <value>
                    <fullName>Rebate Certicate</fullName>
                </value>
                <value>
                    <fullName>Customs Exam</fullName>
                </value>
                <value>
                    <fullName>Special Attendance</fullName>
                </value>
                <value>
                    <fullName>Cargo Repairs</fullName>
                </value>
                <value>
                    <fullName>Port Exam</fullName>
                </value>
                <value>
                    <fullName>Airline Handling</fullName>
                </value>
                <value>
                    <fullName>Airline Storage</fullName>
                </value>
                <value>
                    <fullName>Airline Freight</fullName>
                </value>
                <value>
                    <fullName>Airline Split Fees</fullName>
                </value>
                <value>
                    <fullName>Airline Security Fee</fullName>
                </value>
                <value>
                    <fullName>Airline Hazardous Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TT_Days__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>TT Days</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarifa_objetivo__c</fullName>
        <label>Tarifa objetivo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tarifario_Compras__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarifario Compras</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxable_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_RetencionClientes__c</fullName>
        <description>Campo que confirma el tipo de retención que contiene el cliente</description>
        <formula>IF(
CONTAINS(SAP_Service_Type__r.Code__c, &apos;NO DEDUCIBLE&apos;), &apos;No Aplica&apos;,

IF(
 AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, CONTAINS(SAP_Service_Type__r.Code__c, &apos;-INT_AEREO_(IC)&apos;), ISPICKVAL(SST_Porcentaje_de_division__c, &apos;75%&apos;) ), &apos;A0&apos;,
IF(
 AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, CONTAINS(SAP_Service_Type__r.Code__c, &apos;-INT_AEREO_(IC)&apos;), ISPICKVAL(SST_Porcentaje_de_division__c, &apos;25%&apos;) ), &apos;A3&apos;,

IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;Si&apos;) ), &apos;A3&apos;,
IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;Si&apos;) ), &apos;A3&apos;,
IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;Si&apos;) ), &apos;A0&apos;,
IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt;&apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;Si&apos;) ), &apos;A0&apos;,
IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;) ), &apos;A3&apos;,

IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;), SAP_Service_Type__r.Code__c = &apos;WH-MBRAS_DESCARGA IC&apos;), &apos;A0&apos;,
IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;), SAP_Service_Type__r.Code__c = &apos;FN-MNBRA_DESCARGA_IC&apos;), &apos;A0&apos;,
IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;), SAP_Service_Type__r.Code__c = &apos;R-MBRAS_DESCARGA_IC&apos;), &apos;A0&apos;,
IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;) ), &apos;A3&apos;,


IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;), SAP_Service_Type__r.Code__c = &apos;WH-MBRAS_DESCARGA IC&apos;), &apos;A3&apos;,
IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;), SAP_Service_Type__r.Code__c = &apos;FN-MNBRA_DESCARGA_IC&apos;), &apos;A3&apos;,
IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;), SAP_Service_Type__r.Code__c = &apos;R-MBRAS_DESCARGA_IC&apos;), &apos;A3&apos;,
IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;) ), &apos;A0&apos;,

IF(
AND( Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt;&apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;No&apos;) ), &apos;A0&apos;,
&apos;A0&apos;)))))))))))))))))</formula>
        <label>Tipo de Retención Clientes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_RetencionProveedores__c</fullName>
        <description>Campo que confirma el tipo de retención que contiene el proveedor</description>
        <formula>IF(
CONTAINS( SAP_Service_Type__r.Code__c, &apos;NO DEDUCIBLE&apos;), &apos;V0&apos;,

IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, CONTAINS(SAP_Service_Type__r.Code__c, &apos;-INT_AEREO_(IC)&apos;), ISPICKVAL(SST_Porcentaje_de_division__c, &apos;75%&apos;) ), &apos;V0&apos;,
IF(
AND( Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, CONTAINS(SAP_Service_Type__r.Code__c, &apos;-INT_AEREO_(IC)&apos;), ISPICKVAL(SST_Porcentaje_de_division__c, &apos;25%&apos;) ), &apos;V3&apos;,

IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;SI&apos;) ), &apos;V3&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;SI&apos;) ), &apos;V3&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;SI&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;SI&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V3&apos;,

IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;), OR(SAP_Service_Type__r.Code__c=&apos;WH-MBRAS_DESCARGA IC&apos;,SAP_Service_Type__r.Code__c=&apos;FN-MNBRA_DESCARGA_IC&apos;,SAP_Service_Type__r.Code__c=&apos;R-MBRAS_DESCARGA_IC&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V3&apos;,


IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;), OR(SAP_Service_Type__r.Code__c=&apos;WH-MBRAS_DESCARGA IC&apos;,SAP_Service_Type__r.Code__c=&apos;FN-MNBRA_DESCARGA_IC&apos;,SAP_Service_Type__r.Code__c=&apos;R-MBRAS_DESCARGA_IC&apos;) ), &apos;V3&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V0&apos;,

IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c = &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c &lt;&gt; &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c &lt;&gt; &apos;MEX&apos;, Country_of_Load__c = &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c &lt;&gt; &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c = &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V0&apos;,
IF(
AND( Carrier_Account__r.Direccion_Principal__r.Pais_cat1__c &lt;&gt; &apos;MEX&apos;, Country_of_Load__c &lt;&gt; &apos;Mexico&apos;, Country_of_Discharge__c &lt;&gt; &apos;Mexico&apos;, ISPICKVAL(SAP_Service_Type__r.VAT_Withholding__c, &apos;NO&apos;) ), &apos;V0&apos;,
&apos;V0&apos;)))))))))))))))))</formula>
        <label>Tipo de Retención Proveedores</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transhipment__c</fullName>
        <label>Transhipment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services Rates (Account)</relationshipLabel>
        <relationshipName>Services_Rates_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Via__c</fullName>
        <label>Via</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volumetric_Factor__c</fullName>
        <inlineHelpText>Max Kgs per M3</inlineHelpText>
        <label>Vol. Factor</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Monthly_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warehouse Monthly Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zona__c</fullName>
        <formula>text(Route__r.Zona__c )</formula>
        <label>Zona</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mgr2020__c</fullName>
        <defaultValue>false</defaultValue>
        <label>mgr2020</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mq100__c</fullName>
        <label>-q100</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>q10000__c</fullName>
        <label>q10000</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>q1000__c</fullName>
        <label>q1000</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>q100__c</fullName>
        <label>q100</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Service Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_for__c</columns>
        <columns>Route__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Buy_Rate__c</columns>
        <columns>Fee_Rate__c</columns>
        <columns>Valid_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomRate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Consulta</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Route__c</columns>
        <columns>SAP_Service_Type__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Account_for__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Caja_53_FT</fullName>
        <booleanFilter>1 AND (2 OR 3) AND (4 OR 5 OR 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_for__c</columns>
        <columns>Route__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Buy_Rate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_for__c</field>
            <operation>contains</operation>
            <value>Cotizador</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Caja 53 FT</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Caja 53 FT CRUCE</value>
        </filters>
        <filters>
            <field>Route__c</field>
            <operation>equals</operation>
            <value>Silao de la Victoria - Las Vegas NV</value>
        </filters>
        <filters>
            <field>Route__c</field>
            <operation>equals</operation>
            <value>San Juan del Rio - Olyphant PA</value>
        </filters>
        <filters>
            <field>Route__c</field>
            <operation>equals</operation>
            <value>San Juan del Rio - Sugar Land TX</value>
        </filters>
        <label>Caja 53 FT</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Consulta</fullName>
        <columns>NAME</columns>
        <columns>Account_for__c</columns>
        <columns>Route__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Buy_Rate__c</columns>
        <columns>Fee_Rate__c</columns>
        <columns>Valid_Until__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomRate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Valid_Until__c</field>
            <operation>greaterThan</operation>
            <value>1/31/2023</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account_for__c</field>
            <operation>notEqual</operation>
            <value>cotizador,TARIFARIO TERRESTRE NACIONAL</value>
        </filters>
        <label>Tarifario</label>
    </listViews>
    <listViews>
        <fullName>Cotizador</fullName>
        <columns>NAME</columns>
        <columns>Account_for__c</columns>
        <columns>Route__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Buy_Rate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>INTER</value>
        </filters>
        <label>Cotizador</label>
    </listViews>
    <listViews>
        <fullName>Freights</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Fee_Category__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>TT_Days__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Fee_Rate__c</columns>
        <columns>Route__c</columns>
        <columns>Active__c</columns>
        <columns>Valid_Until__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Fee__c.Fee_Freight,Fee__c.Air_Freight</value>
        </filters>
        <label>Freights</label>
    </listViews>
    <listViews>
        <fullName>Local_Transports</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Fee_Category__c</columns>
        <columns>Fee_Description__c</columns>
        <columns>Account_for__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Fee_Rate__c</columns>
        <columns>Port_Airport__c</columns>
        <columns>Delivery_Zone__c</columns>
        <columns>Active__c</columns>
        <columns>Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Fee__c.Fee_Local_Transport</value>
        </filters>
        <label>Local Transports</label>
    </listViews>
    <listViews>
        <fullName>Nacional</fullName>
        <columns>NAME</columns>
        <columns>Account_for__c</columns>
        <columns>Route__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Buy_Rate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_for__c</field>
            <operation>contains</operation>
            <value>Nacional</value>
        </filters>
        <filters>
            <field>Container_Type__c</field>
            <operation>contains</operation>
            <value>48</value>
        </filters>
        <label>Nacional</label>
    </listViews>
    <listViews>
        <fullName>Other_Fees</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Fee_Category__c</columns>
        <columns>Fee_Description__c</columns>
        <columns>Account_for__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Fee_Rate__c</columns>
        <columns>Active__c</columns>
        <columns>Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Fee__c.Other_Fees</value>
        </filters>
        <label>Other Fees</label>
    </listViews>
    <listViews>
        <fullName>Spot_TNA</fullName>
        <columns>NAME</columns>
        <columns>Account_for__c</columns>
        <columns>Route__c</columns>
        <columns>Container_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Carrier_Account__c</columns>
        <columns>Buy_Rate__c</columns>
        <columns>Fee_Rate__c</columns>
        <columns>Valid_Until__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CustomRate__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomRate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Account_for__c</field>
            <operation>equals</operation>
            <value>Cotizador</value>
        </filters>
        <filters>
            <field>Valid_Until__c</field>
            <operation>greaterThan</operation>
            <value>10/1/2023</value>
        </filters>
        <label>Spot TNA</label>
    </listViews>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Rates</pluralLabel>
    <recordTypes>
        <fullName>Air_Freight</fullName>
        <active>true</active>
        <label>Air Freight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fee_Freight</fullName>
        <active>true</active>
        <label>Sea/Ground Freight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fee_Local_Transport</fullName>
        <active>true</active>
        <label>Local Transport</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Fees</fullName>
        <active>true</active>
        <label>Other Service Charges</label>
    </recordTypes>
    <recordTypes>
        <fullName>Servicios</fullName>
        <active>true</active>
        <label>Servicios</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Max_Kgs_Max_M3</fullName>
        <active>false</active>
        <errorConditionFormula>if(AND( TEXT(Fee_Category__c) == &apos;Drayages&apos;, 
TEXT(Rate_Type__c) ==&apos;Fixed&apos;), if(ISNULL(Max_Kgs__c) == true,
if(ISNULL(Max_M3__c) == true,true,false),false)
,false)</errorConditionFormula>
        <errorMessage>The field &quot;Max Kgs&quot; or &quot;Max M3&quot;  or both must be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Rate_Validation_Rule</fullName>
        <active>true</active>
        <description>v c s p</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Servicios&apos;,
OR(
SAP_Service_Type__r.Code__c= &quot;FTN&quot;,
SAP_Service_Type__r.Code__c= &quot;FTN02&quot;,
SAP_Service_Type__r.Code__c= &quot;FCONA&quot;
)
)</errorConditionFormula>
        <errorMessage>Record Type no compatible con SAP Service Type seleccionado.

SOLICITAR ALTA DE TARIFA CON DEPARTAMENTO DE COMPRAS POR MEDIO DE CHATTER</errorMessage>
    </validationRules>
</CustomObject>